# note_vi_backend_fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  kklogging.ini  pyproject.toml
alembic/migrations/: env.py
alembic/migrations/versions/: 018d2a34ee3f_database_creation1.py  0b3654e2fae5_summary.py  1fa15519dd46_database_creation.py  381d7f304d62_fix_user_notes.py  3e8ea1bec92b_database_creation2.py  72eba4b35abe_database_creation1.py  8d87f1f08615_database_creation1.py  921357b6fba7_database_creation1.py  961066f81de1_favorite_summaries.py  bf4ea2491335_refact_favorites.py  e097fb201c84_change.py  e3de439483fe_add_tokens.py  f295829871a6_notes.py  f5848ce1d5be_files.py
scripts/: create_roles.sh  start-dev.sh
scripts/docker/: celery.sh
scripts/postgres/: backup  restore
src/: config.py  constants.py  database.py  exceptions.py  main.py  models.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  logic.py  manager.py  models.py  router.py  schemas.py  service.py  shemas.py  utils.py
src/logs/: config.py  json_logger.py  middlewares.py  schemas.py
src/notes/: logic.py  models.py
src/summary/: constants.py  dependencies.py  logic.py  models.py  router.py  schemas.py  utils.py
src/tasks/: router.py  tasks.py  templates.py
tests/: conftest.py
tests/auth/: conftest.py  test_register.py  test_roles.py
