[tool.poetry]
name = "note-vi-backend-fastapi"
version = "0.1.0"
description = ""
authors = ["Viva <sovestyaaaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi-users = "^12.1.3"
fastapi-users-db-sqlalchemy = "^6.0.1"
setuptools = "^69.1.1"
just-sh = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
